--- a/app/src/main/res/layout/activity_resultado__detalhes.xml
+++ b/app/src/main/res/layout/activity_resultado__detalhes.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".resultados.VistoriaInteligente_Resultado_Detalhes"
     tools:ignore="MergeRootFrame">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -97,8 +96,8 @@
                 android:background="#9FA8DA"
                 android:gravity="center_horizontal"
                 android:text="Bizus"
-                android:textColor="#FFEB3B"
-                android:textColorHighlight="#FFEB3B"
+                android:textColor="#1B5E20"
+                android:textColorHighlight="#1B5E20"
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
@@ -109,6 +108,13 @@
                 android:paddingHorizontal="5dp"
                 style="@style/bizus"
                  />
+
+            <ImageView
+                android:id="@+id/img_bizus"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </ImageView>
 
         </LinearLayout>
 
