--- a/app/src/main/res/layout/activity_divisao_h.xml
+++ b/app/src/main/res/layout/activity_divisao_h.xml
@@ -39,7 +39,7 @@
 
             <Button
                 android:id="@+id/H2"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/button_H2"
                 android:onClick="onClick"
@@ -49,7 +49,7 @@
 
             <Button
                 android:id="@+id/H3"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/button_H3"
                 android:onClick="onClick"
