--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_main"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 app:cardBackgroundColor="@color/white"
                 app:cardCornerRadius="3dp"
                 app:cardElevation="3dp"
@@ -50,133 +50,138 @@
                         android:text="Para começar, escolha abaixo um tipo de perfil, para direcionarmos você para as opções relacionadas:"
                         android:textColor="@color/black_text"
                         android:textSize="20sp" />
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/card1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        app:cardBackgroundColor="@color/white"
+                        app:cardCornerRadius="3dp"
+                        app:cardElevation="3dp"
+                        app:cardUseCompatPadding="true"
+                        app:contentPadding="5dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <ImageView
+                                android:id="@+id/img_main1"
+                                android:layout_width="75dp"
+                                android:layout_height="75dp"
+                                android:layout_margin="5dp"
+                                android:src="@drawable/user" />
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:id="@+id/txt_main_titulo1"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:layout_margin="5dp"
+                                    android:justificationMode="inter_word"
+                                    android:paddingStart="10sp"
+                                    android:text="Bombeiros, Engenheiros e relacionados."
+                                    android:textColor="#474544"
+                                    android:textColorHint="#107C72"
+                                    android:textSize="20sp"
+                                    android:textStyle="bold"
+                                    tools:ignore="RtlSymmetry" />
+
+                                <TextView
+                                    android:id="@+id/perfil1"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="right"
+                                    android:layout_marginEnd="5dp"
+                                    android:text="Perfil 1"
+                                    android:textColor="#B0272626"
+                                    android:textSize="16dp"
+                                    android:textStyle="bold">
+
+                                </TextView>
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/card2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        app:cardBackgroundColor="@color/white"
+                        app:cardCornerRadius="3dp"
+                        app:cardElevation="3dp"
+                        app:cardUseCompatPadding="true"
+                        app:contentPadding="5dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <ImageView
+                                android:id="@+id/img_main2"
+                                android:layout_width="75dp"
+                                android:layout_height="75dp"
+                                android:layout_margin="5dp"
+                                android:src="@drawable/user" />
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:id="@+id/txt_main_titulo2"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:layout_margin="5dp"
+                                    android:justificationMode="inter_word"
+                                    android:paddingLeft="10sp"
+                                    android:text="Empresários, Contadores e relacionados."
+                                    android:textColor="#474544"
+                                    android:textColorHint="#107C72"
+                                    android:textSize="20sp"
+                                    android:textStyle="bold" />
+
+                                <TextView
+                                    android:id="@+id/perfil2"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="right"
+                                    android:layout_marginEnd="5dp"
+                                    android:text="Perfil 2"
+                                    android:textColor="#B0272626"
+                                    android:textSize="16dp"
+                                    android:textStyle="bold">
+
+                                </TextView>
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                    </androidx.cardview.widget.CardView>
                 </LinearLayout>
 
 
             </androidx.cardview.widget.CardView>
 
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="3dp"
-            app:cardElevation="3dp"
-            app:cardUseCompatPadding="true"
-            app:contentPadding="5dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/img_main1"
-                    android:layout_width="75dp"
-                    android:layout_height="75dp"
-                    android:layout_margin="5dp"
-                    android:src="@drawable/user" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/txt_main_titulo1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_margin="5dp"
-                        android:paddingLeft="16sp"
-                        android:text="Bombeiros, Engenheiros e relacioados."
-                        android:textColor="#F44336"
-                        android:textColorHint="#107C72"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/perfil1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="right"
-                        android:layout_marginEnd="5dp"
-                        android:text="Perfil 1"
-                        android:textColor="#B0272626"
-                        android:textSize="16dp"
-                        android:textStyle="bold">
-
-                    </TextView>
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="3dp"
-            app:cardElevation="3dp"
-            app:cardUseCompatPadding="true"
-            app:contentPadding="5dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/img_main2"
-                    android:layout_width="75dp"
-                    android:layout_height="75dp"
-                    android:layout_margin="5dp"
-                    android:src="@drawable/user" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/txt_main_titulo2"
-                        android:layout_width="268dp"
-                        android:layout_height="48dp"
-                        android:layout_gravity="center"
-                        android:layout_margin="5dp"
-                        android:paddingLeft="16sp"
-                        android:text="Empresários, Contadores e relacionados."
-                        android:textColor="#72A13D"
-                        android:textColorHint="#72A13D"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/perfil2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="right"
-                        android:layout_marginEnd="5dp"
-                        android:text="Perfil 2"
-                        android:textColor="#B0272626"
-                        android:textSize="16dp"
-                        android:textStyle="bold">
-
-                    </TextView>
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
     </LinearLayout>
 
 </RelativeLayout>
