--- a/app/src/main/res/drawable/bg_spinner_grupo.xml
+++ b/app/src/main/res/drawable/bg_spinner_grupo.xml
@@ -12,7 +12,7 @@
 
             <item
                 android:drawable="@drawable/ic_arrow_down"
-                android:gravity="end"/>
+                android:gravity="start"/>
 
         </layer-list>
     </item>
