--- a/app/src/main/res/layout/item_grupos.xml
+++ b/app/src/main/res/layout/item_grupos.xml
@@ -14,11 +14,13 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="5dp"
         android:text="Name"
         android:layout_toRightOf="@id/img_iconGrupo"
         android:layout_centerVertical="true"
         android:layout_marginStart="5dp"
-        android:textSize="20dp"
+        android:textColor="@color/black_text"
+        android:textSize="24sp"
         android:id="@+id/tv_nameGrupo"/>
 
 </RelativeLayout>
